Fixed the Alignment Issue

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -89,16 +89,23 @@ body {
   -webkit-text-fill-color: transparent;
 }
 .small-text {
-  position: absolute;
-  top: 159vh;
-  left: 69vw; 
-  transform: translate(-50%, -50%);
+  position: relative; 
+  top: 0px; 
+  right: 130px; 
+  margin: 0 auto; 
   text-align: center;
   color: #3b82f6;
   font-size: 4.2rem;
   font-weight: 600;
   line-height: 1.1;
 }
+.text-container {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  height: 100%; 
+}
+
 
 
 /********** Media Queries ***********/
